<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.korbi.todolist.ui.AddEditTask"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:cropToPadding="false"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_icon_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/App_Version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AppVersion"
            android:textSize="16sp"
            android:paddingBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:paddingBottom="15dp"
            android:text="@string/app_info" />

        <Button
            android:id="@+id/about_rate_app_button"
            android:onClick="rateMe"
            android:text="@string/rate_app_button"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/about_show_my_other_apps_button"
            android:onClick="showOtherApps"
            android:text="@string/show_my_other_apps"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/contact_me"
            android:autoLink="email"
            android:paddingBottom="15dp"/>

        <TextView
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sourcecode"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:autoLink="web"/>

    </TableLayout>

</ScrollView>
